--- a/templates/index.html
+++ b/templates/index.html
@@ -233,8 +233,8 @@ $(document).ready(function(){
                 <textarea name="data" id="data"></textarea>
             </div>
             <div id="filter_div" style="padding: 10px;">
-                <label for="criteria">Filter Criteria:</label>
-                <input type="text" name="criteria" id="criteria"></textarea>
+                <label for="filter_criteria">Filter Criteria:</label>
+                <input type="text" name="filter_criteria" id="filter_criteria">
             </div>
             <div id="new_data_div" style="padding: 10px;">
                 <label for="new_data">Data To Update:</label>
